[package]
name = "webml"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.3", features = ["postgres", "mysql", "sqlite"] }
linfa = "0.8.0"
linfa-clustering = "0.8.0"
linfa-datasets = { version = "0.8.0", features = ["diabetes", "winequality", "iris"] }
rayon = "1.11.0"
rocket = { version = "0.5.1", features = ["serde_json", "json"] }
smartcore = "0.4.6"
tera = "1.20.1"
